@@ -1,6 +1,8 @@
 			   XPCE ChangeLog
 			   ==============
 
+* ADDED: PceEmacs: show accelerators in menu-bar in human-readable form.
+
 * ADDED: PceEmacs: show current line-number in status window.
 
 * FIXED: PceEmacs: various dangling issues around using GNU emacs tag-tables.
